update title and desc

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Example project
-description: Project description in here.
+title: Awis Alkarni
+description: Fullstack developer. Learning something new everyday.
 theme: jekyll-theme-minimal
 future: true
